--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Behavioral Profile Test</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    <div id="quiz">
+<body class="h-screen w-full flex items-center justify-center bg-linear-to-r from-cyan-500 to-blue-500">
+    <div id="quiz" class="bg-white w-350 h-180 mt-10 text-center border-2 rounded-xl ">
 
-        
+        <h1 class="text-4xl mt-10 font-mono font-bold ">Teste de Perfil comportamental</h1>
+
+        <div>
+            
+        </div>
 
     </div>
       <script src="script.js"></script>
