--- a/index.html
+++ b/index.html
@@ -6,13 +6,114 @@
     <title>Behavioral Profile Test</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body class="h-screen w-full flex items-center justify-center bg-linear-to-r from-cyan-500 to-blue-500">
-    <div id="quiz" class="bg-white w-350 h-180 mt-10 text-center border-2 rounded-xl ">
+<body class="h-screen w-full flex items-center justify-center bg-linear-to-r bg-[url(/img.jpg)]">
+    <div id="quiz" class="bg-white w-350 mt-10 text-center border-2 rounded-xl overflow-y-auto max-h-screen">
+        <div>
 
-        <h1 class="text-4xl mt-10 font-mono font-bold ">Teste de Perfil comportamental</h1>
+            <h1 class="text-4xl mt-10 font-mono font-bold ">Teste de Perfil comportamental</h1>
+        </div>
+        <div>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question1" id="" value="Eague"> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question1" id="" value="Shark"> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question1" id="" value="Wolf"> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question1" id="" value="Cat"> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
+        
+        <div>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question2" id=""> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question2" id=""> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question2" id=""> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question2" id=""> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
 
         <div>
-            
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question3" id=""> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question3" id=""> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question3" id=""> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question3" id=""> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
+
+        <div>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question4" id=""> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question4" id=""> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question4" id=""> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question4" id=""> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
+
+        <div>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question5" id=""> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question5" id=""> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question5" id=""> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question5" id=""> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
+
+        <div>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question6" id=""> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question6" id=""> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question6" id=""> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question6" id=""> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
+
+        <div>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question7" id=""> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question7" id=""> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question7" id=""> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question7" id=""> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
+
+        <div>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question8" id=""> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question8" id=""> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question8" id=""> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question8" id=""> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
+
+        <div>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question9" id=""> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question9" id=""> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question9" id=""> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question9" id=""> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
+
+        <div>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <ol class="mt-5 ml-10">
+                <li class="flex"><input type="radio" name="question10" id=""> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question10" id=""> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question10" id=""> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question10" id=""> <p class="ml-3">Opção 4</p></li>
+            </ol>
+        </div>
+
+        <div class="mb-30 mt-20 flex ml-20 text-center text-xl">
+            <div class="flex text-center"><h1 class="mt-2 mr-3 font-serif">Escreva seu nome: </h1> <input type="text" name="" id="" class="w-70 border-2 rounded-l-lg p-2 mr-2"> <button class="rounded-r-lg hover:cursor-pointer bg-green-500 border-2 w-30 text-center hover:bg-green-800" onclick="get_response()">Enviar</button></div>
         </div>
 
     </div>
