--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 class="text-4xl mt-10 font-mono font-bold ">Teste de Perfil comportamental</h1>
         </div>
         <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">1. Pergunta</h1>
             <ol class="mt-5 ml-10">
                 <li class="flex"><input type="radio" name="question1" id="" value="Eague"> <p class="ml-3">Opção 1</p></li>
                 <li class="flex"><input type="radio" name="question1" id="" value="Shark"> <p class="ml-3">Opção 2</p></li>
@@ -23,17 +23,17 @@
         </div>
         
         <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">2. Pergunta</h1>
             <ol class="mt-5 ml-10">
-                <li class="flex"><input type="radio" name="question2" id=""> <p class="ml-3">Opção 1</p></li>
-                <li class="flex"><input type="radio" name="question2" id=""> <p class="ml-3">Opção 2</p></li>
-                <li class="flex"><input type="radio" name="question2" id=""> <p class="ml-3">Opção 3</p></li>
-                <li class="flex"><input type="radio" name="question2" id=""> <p class="ml-3">Opção 4</p></li>
+                <li class="flex"><input type="radio" name="question2" id="" value="Eague"> <p class="ml-3">Opção 1</p></li>
+                <li class="flex"><input type="radio" name="question2" id="" value="Shark"> <p class="ml-3">Opção 2</p></li>
+                <li class="flex"><input type="radio" name="question2" id="" value="Wolf"> <p class="ml-3">Opção 3</p></li>
+                <li class="flex"><input type="radio" name="question2" id="" value="Cat"> <p class="ml-3">Opção 4</p></li>
             </ol>
         </div>
 
         <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">3. Pergunta</h1>
             <ol class="mt-5 ml-10">
                 <li class="flex"><input type="radio" name="question3" id=""> <p class="ml-3">Opção 1</p></li>
                 <li class="flex"><input type="radio" name="question3" id=""> <p class="ml-3">Opção 2</p></li>
@@ -43,72 +43,12 @@
         </div>
 
         <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
+            <h2 class="font-bold flex mt-10 ml-10 text-2xl">4. Pergunta</h1>
             <ol class="mt-5 ml-10">
                 <li class="flex"><input type="radio" name="question4" id=""> <p class="ml-3">Opção 1</p></li>
                 <li class="flex"><input type="radio" name="question4" id=""> <p class="ml-3">Opção 2</p></li>
                 <li class="flex"><input type="radio" name="question4" id=""> <p class="ml-3">Opção 3</p></li>
                 <li class="flex"><input type="radio" name="question4" id=""> <p class="ml-3">Opção 4</p></li>
-            </ol>
-        </div>
-
-        <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
-            <ol class="mt-5 ml-10">
-                <li class="flex"><input type="radio" name="question5" id=""> <p class="ml-3">Opção 1</p></li>
-                <li class="flex"><input type="radio" name="question5" id=""> <p class="ml-3">Opção 2</p></li>
-                <li class="flex"><input type="radio" name="question5" id=""> <p class="ml-3">Opção 3</p></li>
-                <li class="flex"><input type="radio" name="question5" id=""> <p class="ml-3">Opção 4</p></li>
-            </ol>
-        </div>
-
-        <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
-            <ol class="mt-5 ml-10">
-                <li class="flex"><input type="radio" name="question6" id=""> <p class="ml-3">Opção 1</p></li>
-                <li class="flex"><input type="radio" name="question6" id=""> <p class="ml-3">Opção 2</p></li>
-                <li class="flex"><input type="radio" name="question6" id=""> <p class="ml-3">Opção 3</p></li>
-                <li class="flex"><input type="radio" name="question6" id=""> <p class="ml-3">Opção 4</p></li>
-            </ol>
-        </div>
-
-        <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
-            <ol class="mt-5 ml-10">
-                <li class="flex"><input type="radio" name="question7" id=""> <p class="ml-3">Opção 1</p></li>
-                <li class="flex"><input type="radio" name="question7" id=""> <p class="ml-3">Opção 2</p></li>
-                <li class="flex"><input type="radio" name="question7" id=""> <p class="ml-3">Opção 3</p></li>
-                <li class="flex"><input type="radio" name="question7" id=""> <p class="ml-3">Opção 4</p></li>
-            </ol>
-        </div>
-
-        <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
-            <ol class="mt-5 ml-10">
-                <li class="flex"><input type="radio" name="question8" id=""> <p class="ml-3">Opção 1</p></li>
-                <li class="flex"><input type="radio" name="question8" id=""> <p class="ml-3">Opção 2</p></li>
-                <li class="flex"><input type="radio" name="question8" id=""> <p class="ml-3">Opção 3</p></li>
-                <li class="flex"><input type="radio" name="question8" id=""> <p class="ml-3">Opção 4</p></li>
-            </ol>
-        </div>
-
-        <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
-            <ol class="mt-5 ml-10">
-                <li class="flex"><input type="radio" name="question9" id=""> <p class="ml-3">Opção 1</p></li>
-                <li class="flex"><input type="radio" name="question9" id=""> <p class="ml-3">Opção 2</p></li>
-                <li class="flex"><input type="radio" name="question9" id=""> <p class="ml-3">Opção 3</p></li>
-                <li class="flex"><input type="radio" name="question9" id=""> <p class="ml-3">Opção 4</p></li>
-            </ol>
-        </div>
-
-        <div>
-            <h2 class="font-bold flex mt-10 ml-10 text-2xl">Pergunta</h1>
-            <ol class="mt-5 ml-10">
-                <li class="flex"><input type="radio" name="question10" id=""> <p class="ml-3">Opção 1</p></li>
-                <li class="flex"><input type="radio" name="question10" id=""> <p class="ml-3">Opção 2</p></li>
-                <li class="flex"><input type="radio" name="question10" id=""> <p class="ml-3">Opção 3</p></li>
-                <li class="flex"><input type="radio" name="question10" id=""> <p class="ml-3">Opção 4</p></li>
             </ol>
         </div>
 
